--- a/index.html
+++ b/index.html
@@ -467,6 +467,41 @@
         </div>
         <div class="events-slider swiper">
           <div class="swiper-wrapper">
+
+            <div class="swiper-slide">
+              <div class="testimonial-item d-flex max-w-75 flex-column align-items-center">
+                <h1 id="intro">Ho Ho HomeworkHub</h1>
+                <div class="d-flex justify-content-center align-items-center w-75 mt-2 flex-wrap">
+                  <img class="rounded-3 img-fluid" src="./assets/img/HoHoHomeworkHub.PNG" width="400"
+                    alt="HoHoHomeworkHub Insta Post">
+                  <p class="w-75 mt-5" style="font-style: normal;">
+                    This Holiday Season, Homeworkhub is supporting local charities to provide students in KW with backpacks, 
+                    school supplies, and educational gifts. We're inviting you to our packing party: come together with the 
+                    community and help package and distribute the gifts to the needy! Meals will be provided, as well as volunteer
+                    hours, more details on registration form below!
+                  </p>
+                  <a href="https://docs.google.com/forms/d/e/1FAIpQLScndCKOgEMR4rnSIMdrXVUNnoVBWnbw6-8jK1WKZrS8euhKyg/viewform">
+                    <button class="reg mb-5">Register Here!</button>
+                  </a>
+                </div>
+              </div>
+            </div>
+
+            <div class="swiper-slide">
+              <div class="testimonial-item d-flex max-w-75 flex-column align-items-center">
+                <h1 id="intro">HomeworkHub at Tedx Columbia Lake Youth</h1>
+                <div class="d-flex justify-content-center align-items-center w-75 mt-2 flex-wrap">
+                  <img class="rounded-3 img-fluid" src="./assets/img/tedx4.jpeg" width="600"
+                    alt="HomeworkHub Team at Tedx">
+                  <p class="w-75 mt-5" style="font-style: normal;">
+                    Our founder Paris Cai, had the amazing opportunity to speak about HomeworkHub through her Ted Talk "From Classroom
+                    to Cataylst" at the Tedx Columbia Lake Youth 2023 event! We're so proud of how far HomeworkHub has come, and 
+                    will continue to inspire students to aim for the stars!
+                  </p>
+                </div>
+              </div>
+            </div>
+
             <div class="swiper-slide">
               <div class="testimonial-item d-flex max-w-75 flex-column align-items-center">
                 <h1 id="intro">Let's Code: Python in 8 Weeks</h1>
@@ -490,7 +525,7 @@
               <div class="testimonial-item d-flex max-w-75 flex-column align-items-center">
                 <h1 id="intro">HomeworkHub 2-year anniversary</h1>
                 <div class="d-flex justify-content-center align-items-center w-75 mt-2 flex-wrap">
-                  <img class="rounded-3 img-fluid" src="./assets/img/TeamPic2YearAnn.PNG" width="500"
+                  <img class="rounded-3 img-fluid" src="./assets/img/TeamPic2YearAnn.PNG" width="600"
                     alt="2 Year Anni Team Picture">
                   <p class="w-75 mt-5" style="font-style: normal;">
                     HomeworkHub celebrates its two year anniversary this February! We are so grateful for all of our
@@ -504,9 +539,9 @@
               <div class="testimonial-item d-flex flex-column align-items-center">
                 <h1 id="intro">Top Canadian Scholarships</h1>
                 <div class="d-flex justify-content-center align-items-center max-w-75 mt-2 flex-wrap">
-                  <img class="rounded-3 img-fluid" src="./assets/img/scholarshipPanel.PNG" width="300"
+                  <img class="rounded-3 img-fluid" src="./assets/img/scholarshipPanel.PNG" width="400"
                     alt="scholarship panel">
-                  <p class="w-75 mt-2" style="font-style: normal;">
+                  <p class="w-75 mt-5" style="font-style: normal;">
                     Our guest panelists, 2022 Schulich Scholar Sarah Wilson from University of Waterloo's Computer
                     Science
                     program and 2023 Queen's Chancellor Scholar Sammi Wang from Queen's University's Commerce Program,
@@ -521,9 +556,9 @@
               <div class="testimonial-item d-flex flex-column align-items-center">
                 <h1 id="intro">Top Canadian Business Programs </h1>
                 <div class="d-flex justify-content-center align-items-center w-75 mt-2 flex-wrap">
-                  <img class="rounded-3 img-fluid" src="./assets/img/other/HHBusinessPanel.png" width="400"
+                  <img class="rounded-3 img-fluid" src="./assets/img/other/HHBusinessPanel.png" width="375"
                     alt="upenn panel">
-                  <p class="w-75 mt-2" style="font-style: normal;">
+                  <p class="w-75 mt-5" style="font-style: normal;">
                     Our guest panelists, Prem Mehta-Spooner from Queen's University's Commerce Program and Jane Huang
                     from Western University's IVEY Business School will discuss their experience applying to and
                     attending top business programs in Canada!
@@ -538,8 +573,8 @@
                 </h1>
                 <div class="d-flex justify-content-center align-items-center w-75 mt-2 flex-wrap">
                   <img class="rounded-3 img-fluid" src="./assets/img/other/UPennPanel.png" alt="upenn panel"
-                    width="400">
-                  <p class="w-75 mt-2" style="font-style: normal;">
+                    width="375">
+                  <p class="w-75 mt-5" style="font-style: normal;">
                     Our guest panelist, Marissa Sawicki, who is currently an MBA student at the University of
                     Pennsylvania Wharton school of business joined us to discuss her experience applying to and
                     attending one of the top business schools in the world!
@@ -553,7 +588,7 @@
                 <h1 id="intro">UW and UofT Software Engineering Panel </h1>
                 <div class="d-flex justify-content-center align-items-center w-75 mt-2 flex-wrap">
                   <img class="rounded-3 img-fluid" src="./assets/img/other/university-panel-poster.png" alt="se panel"
-                    width="400">
+                    width="375">
                   <p class="w-75 mt-2" style="font-style: normal;">
                     Our guest panelists, Victor Wei from the University of Waterloo’s SE program and Andrey Kobyakov
                     from the University of Toronto’s SE program joined us to discuss their experience applying to and
@@ -567,7 +602,7 @@
               <div class="testimonial-item d-flex flex-column align-items-center">
                 <h1 id="intro">Intro to Finance </h1>
                 <div class="d-flex justify-content-center align-items-center w-75 mt-2 flex-wrap">
-                  <img class="rounded-3 img-fluid intro-to-finance" id="intro-to-finance" width="300"
+                  <img class="rounded-3 img-fluid intro-to-finance" id="intro-to-finance" width="375"
                     src="assets/img/introtofinance.png">
                   <p class="w-75 mt-2" style="font-style: normal;">The intro to Finance lecture, also given to SHAD
                     Canada students last summer, introduced the fundamentals of business and market competition which
@@ -585,7 +620,7 @@
               <div class="testimonial-item d-flex flex-column align-items-center">
                 <h1 id="intro">Ho Ho HomeworkHub</h1>
                 <div class="d-flex justify-content-center align-items-center w-75 mt-2 flex-wrap">
-                  <img class="rounded-3 img-fluid" src="assets/img/gallery/grandriverhospitaldonation.jpg">
+                  <img class="rounded-3 img-fluid" width="700" src="assets/img/gallery/grandriverhospitaldonation.jpg">
                   <p class="w-75 mt-2" style="font-style: normal;">Thanks to the help of our community partners and
                     <b><a href="https://www.risingyouth.ca/">Rising
                         Youth</a></b>,
@@ -602,7 +637,7 @@
               <div class="testimonial-item d-flex flex-column align-items-center">
                 <h1 id="intro">Back to School with Backpacks Fundraiser</h1>
                 <div class="d-flex justify-content-center align-items-center w-75 mt-2 flex-wrap">
-                  <img class="rounded-3 img-fluid" src="assets/img/gallery/backpacksdonation.jpg">
+                  <img class="rounded-3 img-fluid" width="700" src="assets/img/gallery/backpacksdonation.jpg">
                   <p class="w-75 mt-2">For HomeworkHub Tutoring's "Back to School with Backpacks"
                     fundraiser, we
                     raised over
@@ -636,7 +671,7 @@
               <div class="testimonial-item d-flex flex-column justify-content-center align-items-center">
                 <h1 id="intro">Compass Codes</h1>
                 <div class="d-flex w-75 flex-wrap justify-content-center" id="compass-codes">
-                  <img class="rounded-3 img-fluid" src="assets/img/other/compass_codes.png">
+                  <img class="rounded-3 img-fluid" width="300" height="800" src="assets/img/other/compass_codes.png">
                   <p class="w-75 mt-2 font-monospace">Compass Codes is a 2-month long, FREE introductory coding program
                     hosted in
                     partnership with Compass Tutoring. This program, brought to you by our very best computer science
@@ -666,7 +701,7 @@
               <div class="testimonial-item d-flex flex-column align-items-center">
                 <h1 id="intro">Laurier Volunteers Fair!</h1>
                 <div class="d-flex flex-column justify-content-center align-items-center">
-                  <img class="rounded-3 w-50" src="assets/img/other/laurierevent.JPG">
+                  <img class="rounded-3 img-fluid" width="600" src="assets/img/other/laurierevent.JPG">
                   <div class="mt-3">A big thank you to the <a href="https://www.wlu.ca/">University of Laurier </a> for
                     inviting
                     HomeworkHub to their University Fair!</div>
@@ -678,7 +713,7 @@
               <div class="testimonial-item d-flex flex-column align-items-center">
                 <h1 id="intro">Compass RIDE for Refugee</h1>
                 <div class="d-flex flex-column justify-content-center align-items-center">
-                  <img class="rounded-3 w-50 sm:w-100" src="assets/img/other/Compassrideevent.JPG">
+                  <img class="rounded-3 img-fluid" width="800" src="assets/img/other/Compassrideevent.JPG">
                   <div class="mt-4"> Thank you to our community partner <a href="https://compassrefugee.ca/">Compass
                       Refugee</a> for
                     inviting HomeworkHub to their annual RIDE for
