--- a/team.html
+++ b/team.html
@@ -256,6 +256,21 @@
             </div>
           </div>
 
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
+            <div class="member" data-aos="zoom-in" data-aos-delay="100">
+              <div class="pic" data-bioName="Priyanshi"><img src="assets/img/team/Priyanshi.jpg" class="img-fluid tmpSize" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Priyanshi Dokania</h4>
+                <span>QA Director</span>
+                <!--  <div class="social">
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div> -->
+              </div>
+            </div>
+          </div>
+
           <!--Non-Department Head Members-->
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
@@ -436,6 +451,83 @@
               </div>
             </div>
           </div>
+
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
+            <div class="member" data-aos="zoom-in" data-aos-delay="100">
+              <div class="pic" data-bioName="Ayushi Pandit"><img src="assets/img/team/Ayushi Pandit.jpg" class="img-fluid tmpSize" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Ayushi Pandit</h4>
+                <span>QA Team Member</span>
+                <!--  <div class="social">
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div> -->
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
+            <div class="member" data-aos="zoom-in" data-aos-delay="100">
+              <div class="pic" data-bioName="Camille Bernardo"><img src="assets/img/team/Camille Bernardo.jpg" class="img-fluid tmpSize" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Camille Bernardo</h4>
+                <span>QA Team Member</span>
+                <!--  <div class="social">
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div> -->
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
+            <div class="member" data-aos="zoom-in" data-aos-delay="100">
+              <div class="pic" data-bioName="Lucy Chen"><img src="assets/img/team/Lucy Chen.jpg" class="img-fluid tmpSize" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Lucy Chen</h4>
+                <span>QA Team Member</span>
+                <!--  <div class="social">
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div> -->
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
+            <div class="member" data-aos="zoom-in" data-aos-delay="100">
+              <div class="pic" data-bioName="Krisha Raichura"><img src="assets/img/team/Krisha Raichura.jpg" class="img-fluid tmpSize" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Krisha Raichura</h4>
+                <span>QA Team Member</span>
+                <!--  <div class="social">
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div> -->
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
+            <div class="member" data-aos="zoom-in" data-aos-delay="100">
+              <div class="pic" data-bioName="William Liang"><img src="assets/img/team/WilliamLiang.jpg" class="img-fluid tmpSize" alt="">
+              </div>
+              <div class="member-info">
+                <h4>William Liang</h4>
+                <span>Social Media Member</span>
+                <!--  <div class="social">
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div> -->
+              </div>
+            </div>
+          </div>
+
+          
           
 
         </div>
