Fix Bio Mismatch (team page)

--- a/team.html
+++ b/team.html
@@ -454,7 +454,7 @@
 
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
-              <div class="pic" data-bioName="Ayushi Pandit"><img src="assets/img/team/Ayushi Pandit.jpg" class="img-fluid tmpSize" alt="">
+              <div class="pic" data-bioName="Ayushi"><img src="assets/img/team/Ayushi Pandit.jpg" class="img-fluid tmpSize" alt="">
               </div>
               <div class="member-info">
                 <h4>Ayushi Pandit</h4>
@@ -469,7 +469,7 @@
 
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
-              <div class="pic" data-bioName="Camille Bernardo"><img src="assets/img/team/Camille Bernardo.jpg" class="img-fluid tmpSize" alt="">
+              <div class="pic" data-bioName="Camille"><img src="assets/img/team/Camille Bernardo.jpg" class="img-fluid tmpSize" alt="">
               </div>
               <div class="member-info">
                 <h4>Camille Bernardo</h4>
@@ -484,7 +484,7 @@
 
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
-              <div class="pic" data-bioName="Lucy Chen"><img src="assets/img/team/Lucy Chen.jpg" class="img-fluid tmpSize" alt="">
+              <div class="pic" data-bioName="Lucy"><img src="assets/img/team/Lucy Chen.jpg" class="img-fluid tmpSize" alt="">
               </div>
               <div class="member-info">
                 <h4>Lucy Chen</h4>
@@ -514,7 +514,7 @@
 
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
-              <div class="pic" data-bioName="William Liang"><img src="assets/img/team/WilliamLiang.jpg" class="img-fluid tmpSize" alt="">
+              <div class="pic" data-bioName="William"><img src="assets/img/team/WilliamLiang.jpg" class="img-fluid tmpSize" alt="">
               </div>
               <div class="member-info">
                 <h4>William Liang</h4>
