--- a/board-of-directors.html
+++ b/board-of-directors.html
@@ -172,7 +172,7 @@
               </div>
               <div class="member-info">
                 <h4>Paris Cai</h4>
-                <span>Executive Director</span>
+                <span>Founder and Executive Director</span>
                 <!--  <div class="social">
                   <a href=""><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
@@ -213,7 +213,7 @@
           
           <p> </p>
           <P> </P>
-          <p><i>Contact info@homeworkhubtutoring.ca to apply to be a board director</i></p>
+          <p><i>Contact <a href="mailto:info@homeworkhubtutoring.ca">info@homeworkhubtutoring.ca</a> to apply to be a board director</i></p>
 
         </div>
 
