--- a/board-of-directors.html
+++ b/board-of-directors.html
@@ -172,7 +172,7 @@
               </div>
               <div class="member-info">
                 <h4>Paris Cai</h4>
-                <span>Founder and Executive Director</span>
+                <span>Executive Director</span>
                 <!--  <div class="social">
                   <a href=""><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
@@ -213,7 +213,7 @@
           
           <p> </p>
           <P> </P>
-          <p><i>Contact <a href="mailto:info@homeworkhubtutoring.ca">info@homeworkhubtutoring.ca</a> to apply to be a board director</i></p>
+          <p><i>Contact info@homeworkhubtutoring.ca to apply to be a board director</i></p>
 
         </div>
 
@@ -346,9 +346,11 @@
               </div>
 
               <div class="phone">
-                <a href="tel:+19176603871"><i class="bi bi-phone"></i></a>
-                <h4>Call:</h4>
-                <p>+1 917 660 3871</p>
+                <a href="tel:+19176603871"><i class="bx bxl-instagram"></i></a>
+                <h4>Instagram:</h4>
+                <a href="https://www.instagram.com/hh.tutoring/">
+                  <p>@hh.tutoring</p>
+                </a>
               </div>
 
             </div>
