--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,15 +9,34 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <!-- BOOTSTRAP IMPORT -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" integrity="sha256-2TnSHycBDAm2wpZmgdi0z81kykGPJAkiUY+Wf97RbvY=" crossorigin="anonymous">
+    <title>HomeworkHub Tutoring</title>
+    <meta content="" name="description">
+    <meta content="" name="keywords">
+
+    <!-- Favicons -->
+    <link rel="icon" href="assets/img/logo.png">
+    <link href="assets/img/logo.png" rel="apple-touch-icon">
+
+  <!-- Google Fonts -->
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Montserrat:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
+
+    <!-- Vendor CSS Files -->
+    <link href="vendor/aos/aos.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="vendor/remixicon/remixicon.css" rel="stylesheet">
+    <link href="vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -43,7 +62,59 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-    <!-- BOOTSTRAP IMPORT -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha256-gOQJIa9+K/XdfAuBkg2ONAdw5EnQbokw/s2b8BqsRFg=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="./assets/js/translate.js"></script>
+
+    <script type="text/javascript"
+    src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
+      let lang = window.navigator.languages ? window.navigator.languages[0] : null;
+        lang =
+        lang ||
+        window.navigator.language ||
+        window.navigator.browserLanguage ||
+        window.navigator.userLanguage;
+
+      let shortLang = lang;
+      if (shortLang.indexOf('-') !== -1) shortLang = shortLang.split('-')[0];
+      console.log(shortLang);
+      function googleTranslateElementInit() {
+        new google.translate.TranslateElement(
+          {
+            pageLanguage: 'en',
+            layout: google.translate.TranslateElement.InlineLayout,
+          },
+          'google_translate_element'
+        );
+        if (shortLang == 'en') {
+          return;
+        }
+        setTimeout(() => {
+          changeLang();
+        }, 1000);
+      }
+      function changeLang() {
+        let ele = document.querySelector('#google_translate_element select');
+        switch (shortLang) {
+          case 'ua':
+            ele.selectedIndex = 99;
+            break;
+          case 'fr':
+            ele.selectedIndex = 26;
+            break;
+          default:
+            ele.selectedIndex = 20;
+            break;
+        }
+        ele.dispatchEvent(new Event('change'));
+      }
+    </script>
+
+
+    <!-- Vendor JS Files -->
+    <script src="assets/vendor/aos/aos.js"></script>
+    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="assets/vendor/php-email-form/validate.js"></script>
+    <script src="assets/vendor/purecounter/purecounter.js"></script>
+    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   </body>
 </html>
