--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,8 +20,8 @@
     <meta content="" name="keywords">
 
     <!-- Favicons -->
-    <link rel="icon" href="assets/img/logo.png">
-    <link href="assets/img/logo.png" rel="apple-touch-icon">
+    <link rel="icon" href="logo.png">
+    <link href="logo.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link
