--- a/team.html
+++ b/team.html
@@ -232,7 +232,7 @@
               <div class="pic" data-bioName="Jimmy"><img src="assets/img/team/Jimmy.jpeg" class="img-fluid tmpSize" alt=""></div>
               <div class="member-info">
                 <h4>Jimmy Tao</h4>
-                <span>Pairing and Tech Manager</span>
+                <span>Students and Pairing Director</span>
                 <!--  <div class="social">
                   <a href=""><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
