--- a/team.html
+++ b/team.html
@@ -274,7 +274,7 @@
           <!--Non-Department Head Members-->
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
-              <div class="pic" data-bioName="Maggie"><img src="assets/img/team/Naayeli.png" class="img-fluid tmpSize" alt="">
+              <div class="pic" data-bioName="Naayeli"><img src="assets/img/team/Naayeli.png" class="img-fluid tmpSize" alt="">
               </div>
               <div class="member-info">
                 <h4>Naayeli Prakash</h4>
